[package]
name = "gps_laptop_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.6.1"
nmea = "0.6"
anyhow = "1.0"
crossbeam = "0.8.4"
device_query = "2.1.0"
libc = "0.2.161"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}

[build-dependencies]
cc = "1.0"



